# pytorch_metal_benchmark

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: pytorch.ipynb
pytorch_nightly_whl/: torchaudio-0.14.0.dev20220603-cp39-cp39-macosx_11_0_arm64.whl  torchvision-0.14.0.dev20220701-cp39-cp39-macosx_11_0_arm64.whl
