[tool.poetry]
name = "default"
version = "0.1.0"
description = ""
authors = ["Yannick Aaron Lehr <yannick.lehr@ioki.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
torch = {path = "pytorch_nightly_whl/torch-1.13.0.dev20220701-cp39-none-macosx_11_0_arm64.whl"}
torchvision = {path = "pytorch_nightly_whl/torchvision-0.14.0.dev20220701-cp39-cp39-macosx_11_0_arm64.whl"}
torchaudio = {path = "pytorch_nightly_whl/torchaudio-0.14.0.dev20220603-cp39-cp39-macosx_11_0_arm64.whl"}
numpy = "^1.23.0"
tqdm = "^4.64.0"
matplotlib = "^3.5.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pylint = "^2.11.1"
mypy = "^0.910"
pytest = "^6.2.5"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.1.2"
ipykernel = "^6.6.0"
toml = "^0.10.2"
nbqa = "^1.3.1"
pyupgrade = "^2.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
